# va416xx-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Embed.toml  README.md  device.x  gen-helper.sh
.cargo/: def-config.toml
.github/workflows/: ci.yml
automation/: Jenkinsfile
bootloader/: Cargo.toml  README.md
bootloader/src/: main.rs
examples/: README.md
examples/embassy/: Cargo.toml
examples/embassy/src/: lib.rs  main.rs  time_driver.rs
examples/rtic/: Cargo.toml
examples/rtic/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/examples/: adc.rs  blinky.rs  dac-adc.rs  dma.rs  peb1-accelerometer.rs  pwm.rs  pwm_test.rs  rtic-empty.rs  rtt-log.rs  spi.rs  timer-ticks.rs  uart.rs  wdt.rs
examples/simple/src/: main.rs
flashloader/: Cargo.toml  README.md  image-loader.py  requirements.txt
flashloader/slot-a-blinky/: Cargo.toml
flashloader/slot-b-blinky/: Cargo.toml
flashloader/src/: lib.rs  main.rs
jlink/: jlink.gdb
scripts/: VA416xx_Series.yaml  unittest.sh
src/: adc.rs  can0.rs  clkgen.rs  dac0.rs  dma.rs  eth.rs  i2c0.rs  ioconfig.rs  irq_router.rs  lib.rs  porta.rs  spi0.rs  spw.rs  sysconfig.rs  tim0.rs  trng.rs  uart0.rs  utility.rs  watch_dog.rs
src/adc/: ctrl.rs  fifo_clr.rs  fifo_data.rs  irq_clr.rs  irq_enb.rs  irq_end.rs  irq_raw.rs  perid.rs  rxfifoirqtrg.rs  status.rs
src/can0/: bmskb.rs  bmskx.rs  canec.rs  cediag.rs  cgcr.rs  cicen.rs  ciclr.rs  cien.rs  cipnd.rs  cnstat_cmb0.rs  cnstat_cmb1.rs  cnstat_cmb10.rs  cnstat_cmb11.rs  cnstat_cmb12.rs  cnstat_cmb13.rs  cnstat_cmb14.rs  cnstat_cmb2.rs  cnstat_cmb3.rs  cnstat_cmb4.rs  cnstat_cmb5.rs  cnstat_cmb6.rs  cnstat_cmb7.rs  cnstat_cmb8.rs  cnstat_cmb9.rs  cnstat_hcmb.rs  cstpnd.rs  ctim.rs  ctmr.rs  data0_cmb0.rs  data0_cmb1.rs  data0_cmb10.rs  data0_cmb11.rs  data0_cmb12.rs  data0_cmb13.rs  data0_cmb14.rs  data0_cmb2.rs  data0_cmb3.rs  data0_cmb4.rs  data0_cmb5.rs  data0_cmb6.rs  (+102 more)
src/clkgen/: ctrl0.rs  ctrl1.rs  stat.rs
src/dac0/: ctrl0.rs  ctrl1.rs  fifo_clr.rs  fifo_data.rs  irq_clr.rs  irq_enb.rs  irq_end.rs  irq_raw.rs  perid.rs  status.rs  txfifoirqtrg.rs
src/dma/: alt_ctrl_base_ptr.rs  cfg.rs  chnl_enable_clr.rs  chnl_enable_set.rs  chnl_pri_alt_clr.rs  chnl_pri_alt_set.rs  chnl_priority_clr.rs  chnl_priority_set.rs  chnl_req_mask_clr.rs  chnl_req_mask_set.rs  chnl_sw_request.rs  chnl_useburst_clr.rs  chnl_useburst_set.rs  ctrl_base_ptr.rs  dma_active_clr.rs  dma_active_set.rs  dma_done_clr.rs  dma_done_set.rs  dma_req_status.rs  dma_sreq_status.rs  err_clr.rs  err_set.rs  integration_cfg.rs  periph_id_0.rs  periph_id_1.rs  periph_id_2.rs  periph_id_3.rs  periph_id_4.rs  primecell_id_0.rs  primecell_id_1.rs  primecell_id_2.rs  primecell_id_3.rs  stall_status.rs  status.rs  waitonreq_status.rs
src/eth/: dma_ahb_status.rs  dma_bus_mode.rs  dma_curr_rx_bufr_addr.rs  dma_curr_rx_desc.rs  dma_curr_tx_bufr_addr.rs  dma_curr_tx_desc.rs  dma_intr_en.rs  dma_miss_over_counter.rs  dma_oper_mode.rs  dma_rx_desc_list_addr.rs  dma_rx_intr_wdog_timer.rs  dma_rx_poll_demand.rs  dma_status.rs  dma_tx_desc_list_addr.rs  dma_tx_poll_demand.rs  mac_addr_h.rs  mac_addr_l.rs  mac_config.rs  mac_debug.rs  mac_flow_ctrl.rs  mac_frame_fltr.rs  mac_gmii_addr.rs  mac_gmii_data.rs  mac_intr_mask.rs  mac_intr_stat.rs  mac_vlan_tag.rs  mac_wdog_to.rs  mmc_cntrl.rs  mmc_intr_mask_rx.rs  mmc_intr_mask_tx.rs  mmc_intr_rx.rs  mmc_intr_tx.rs  rx1024maxoct_gb.rs  rx128to255oct_gb.rs  rx256to511oct_gb.rs  rx512to1023oct_gb.rs  rx64octets_gb.rs  rx65to127oct_gb.rs  rxalignerror.rs  rxbcastframes_g.rs  (+55 more)
src/i2c0/: address.rs  clkscale.rs  clktolimit.rs  cmd.rs  ctrl.rs  data.rs  fifo_clr.rs  irq_clr.rs  irq_enb.rs  irq_end.rs  irq_raw.rs  perid.rs  rxcount.rs  s0_address.rs  s0_addressb.rs  s0_addressmask.rs  s0_addressmaskb.rs  s0_ctrl.rs  s0_data.rs  s0_fifo_clr.rs  s0_irq_clr.rs  s0_irq_enb.rs  s0_irq_end.rs  s0_irq_raw.rs  s0_lastaddress.rs  s0_maxwords.rs  s0_rxcount.rs  s0_rxfifoirqtrg.rs  s0_state.rs  s0_status.rs  s0_txcount.rs  s0_txfifoirqtrg.rs  state.rs  status.rs  tmconfig.rs  txcount.rs  words.rs
src/ioconfig/: clkdiv0.rs  clkdiv1.rs  clkdiv2.rs  clkdiv3.rs  clkdiv4.rs  clkdiv5.rs  clkdiv6.rs  clkdiv7.rs  perid.rs  porta.rs  portb.rs  portc.rs  portd.rs  porte.rs  portf.rs  portg.rs
src/irq_router/: adcsel.rs  dacsel0.rs  dacsel1.rs  dmasel0.rs  dmasel1.rs  dmasel2.rs  dmasel3.rs  dmattsel.rs  irq_out0.rs  irq_out1.rs  irq_out2.rs  irq_out3.rs  irq_out4.rs  irq_out5.rs  perid.rs
src/porta/: clrout.rs  clroutbyte.rs  datain.rs  datainbyte.rs  datainraw.rs  datainrawbyte.rs  datamask.rs  datamaskbyte.rs  dataout.rs  dataoutbyte.rs  dataoutraw.rs  dataoutrawbyte.rs  delay1.rs  delay1byte.rs  delay2.rs  delay2byte.rs  dir.rs  dirbyte.rs  edge_status.rs  irq_edge.rs  irq_enb.rs  irq_end.rs  irq_evt.rs  irq_raw.rs  irq_sen.rs  perid.rs  pulse.rs  pulsebase.rs  pulsebasebyte.rs  pulsebyte.rs  setout.rs  setoutbyte.rs  togout.rs  togoutbyte.rs
src/spi0/: clkprescale.rs  ctrl0.rs  ctrl1.rs  irq_clr.rs  irq_enb.rs  irq_end.rs  irq_raw.rs  perid.rs  state.rs  status.rs  txfifoirqtrg.rs
src/spw/: clkdiv.rs  ctrl.rs  defaddr.rs  dkey.rs  dmaaddr0.rs  dmactrl0.rs  dmamaxlen0.rs  dmarxdesc0.rs  dmatxdesc0.rs  sts.rs  tc.rs  tdr.rs
src/sysconfig/: adc_cal.rs  analog_cntl.rs  areg_cal.rs  bg_cal.rs  dac0_cal.rs  dac1_cal.rs  dreg_cal.rs  ebi_cfg0.rs  ebi_cfg1.rs  ebi_cfg2.rs  (+36 more)
va416xx/: CHANGELOG.md  Cargo.toml  gen-helper.sh
va416xx-embassy/: CHANGELOG.md  Cargo.toml
va416xx-embassy/src/: lib.rs
va416xx-hal/: CHANGELOG.md  Cargo.toml  README.md  memory.x
va416xx-hal/.cargo/: config.toml  def-config.toml
va416xx-hal/src/: adc.rs  clock.rs  dac.rs  dma.rs  edac.rs  i2c.rs  irq_router.rs  lib.rs  nvm.rs  pins.rs  prelude.rs  pwm.rs  spi.rs  timer.rs  typelevel.rs  uart.rs  wdt.rs
va416xx-hal/src/can/: asynch.rs  frame.rs  ll.rs  mod.rs  regs.rs
va416xx-hal/src/gpio/: asynch.rs  dynpin.rs  mod.rs  pin.rs  reg.rs
va416xx-hal/src/uart/: mod.rs  rx_asynch.rs  tx_asynch.rs
vorago-peb1/: CHANGELOG.md  Cargo.toml  README.md
vorago-peb1/src/: lib.rs
vscode/: launch.json  tasks.json
(+589 files in other folders)
