[package]
name = "flashloader"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1"
embedded-hal-nb = "1"
embedded-io = "0.6"
panic-rtt-target = { version = "0.1.3" }
rtt-target = { version = "0.5" }
rtt-log = "0.3"
log = "0.4"
crc = "3"
rtic-sync = "1"

[dependencies.satrs]
version = "0.2"
default-features = false

[dependencies.ringbuf]
version = "0.4"
default-features = false

[dependencies.once_cell]
version = "1"
default-features = false
features = ["critical-section"]

[dependencies.spacepackets]
version = "0.11"
default-features = false

[dependencies.cobs]
git = "https://github.com/robamu/cobs.rs.git"
branch = "all_features"
default-features = false

[dependencies.va416xx-hal]
path = "../va416xx-hal"
features = ["va41630"]

[dependencies.rtic]
version = "2"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "2"
features = ["cortex-m-systick"]
