[package]
name = "embassy-example"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "1"
embedded-io = "0.6"

rtt-target = { version = "0.5" }
panic-rtt-target = { version = "0.1" }
critical-section = "1"

embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4" }
va416xx-embassy = { path = "../../va416xx-embassy", default-features = false }

[dependencies.ringbuf]
version = "0.4"
default-features = false

[dependencies.once_cell]
version = "1"
default-features = false
features = ["critical-section"]

[dependencies.embassy-executor]
version = "0.7"
features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
]

[dependencies.va416xx-hal]
path = "../../va416xx-hal"
features = ["va41630"]

[features]
default = ["ticks-hz-1_000", "va416xx-embassy/irq-tim14-tim15"]
custom-irqs = []
ticks-hz-1_000 = ["embassy-time/tick-hz-1_000"]
ticks-hz-32_768 = ["embassy-time/tick-hz-32_768"]
